Add Get_Capabilities msg
Also change the encoder to be a bit more descriptive and idiomatic.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["Andrew J. Stone <andrew@oxidecomputer.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitflags = "1.3"
