--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ authors = ["Andrew J. Stone <andrew@oxidecomputer.com>"]
 bitflags = "1.3"
 ring = "0.16.20"
 webpki = "0.22.0"
+
+[dev-dependencies]
+rcgen = "0.8.14"
