--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ authors = ["Andrew J. Stone <andrew@oxidecomputer.com>"]
 
 [dependencies]
 bitflags = "1.3"
+rand = {version = "0.8", features = ["getrandom"]}
 ring = "0.16.20"
 webpki = "0.22.0"
 
 [dev-dependencies]
+test-utils = { path = "test-utils" }
 rcgen = "0.8.14"
