--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,10 @@ webpki = "0.22.0"
 [dev-dependencies]
 test-utils = { path = "test-utils" }
 rcgen = "0.8.14"
+
+[build-dependencies]
+anyhow = "1.0"
+serde = { version = "1.0", features = [ "derive" ] }
+serde_derive = "1.0"
+thiserror = "1.0"
+toml = "0.5.6"
