A Hodgepodge of cleanup in preparation of future work
* Add configuration for measurements and opaque data sizes
* Add wrapper types `SignatureBuf` and `DigestBuf` to safely store and use
signatures and digests respectively.
* Create `SignatureSize` and `DigestSize` checked types to manage raw size input
in one place and trust it at lower levels of the codebase.
* Add a `Nonce` type rather than directly using an array and generating function
* Remove unnecessary constant parameters from `Certificate` and `Digests`
messages, now that they are part of build time config.
* Add SPDM 1.2 style `OpaqueData` and use it in ChallengeAuth
* Move common types used  in multiple messages into `src/msgs/common.rs`
* Start adding `Measurements` message. Still need to implement (de)serialization
* Fix slot mask check for `ChallengeAuth` when `NUM_SLOTS` > 1

--- a/config.rs.template
+++ b/config.rs.template
@@ -21,9 +21,17 @@ pub const MAX_DIGEST_SIZE: usize = {};
 /// The maximum size of a signature in bytes
 pub const MAX_SIGNATURE_SIZE: usize = {};
 
-/// ChallengeAuth responses allow opaque data.
-/// This is probably not necessary for most users/transports.
-pub const MAX_OPAQUE_DATA_SIZE: usize = {};
+/// The maximum size of an opaque element data from table 93 in v1.2.0 of the SPDM spec
+pub const MAX_OPAQUE_ELEMENT_DATA_SIZE: usize = {};
+
+/// The maximum number of opaque elements from table 92 in v1.2.0 of the SPDM spec
+pub const MAX_OPAQUE_ELEMENTS: usize = {};
+
+/// The maximum number of measurement blocks available
+pub const MAX_MEASUREMENT_BLOCKS: usize = {};
+
+/// The maximum size of an individual measurement
+pub const MAX_MEASUREMENT_SIZE: usize = {};
 
 // The capabilities for a given endpoint
 //
