--- a/spdm-config.toml
+++ b/spdm-config.toml
@@ -3,7 +3,8 @@ version = 0x11
 capabilities = ["CERT_CAP", "CHAL_CAP", "ENCRYPT_CAP",  "MAC_CAP", "MUT_AUTH_CAP", "KEY_EX_CAP", "KEY_UPD_CAP"]
 
 [cert_chains]
-num_slots = 1
+# Tests currently rely on this being greater >= 5
+num_slots = 5
 buf_size = 1024
 max_depth = 4
 
@@ -14,3 +15,12 @@ buf_size = 4096
 [algorithms]
 asymmetric_signing = ["ECDSA_ECC_NIST_P256"]
 hash = ["SHA_256", "SHA_512"]
+
+[measurement]
+max_blocks = 8
+max_size = 1024
+
+# Configuration for general opaque data from section 14 of SPDM 1.2.0 spec
+[opaque_data]
+max_elements = 2
+max_element_data_size = 16
