--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,13 @@ license = "MPL 2.0"
 
 [dependencies]
 bitflags = "1.3"
-rand = {version = "0.8", features = ["getrandom"]}
 ring = "0.16.20"
 webpki = "0.22.0"
+
+[dependencies.rand]
+version = "0.8"
+default-features = false
+features = [ "getrandom" ]
 
 [dev-dependencies]
 test-utils = { path = "test-utils" }
