--- a/spdm-config.toml
+++ b/spdm-config.toml
@@ -3,7 +3,8 @@ version = 0x11
 capabilities = ["CERT_CAP", "CHAL_CAP", "ENCRYPT_CAP",  "MAC_CAP", "MUT_AUTH_CAP", "KEY_EX_CAP", "KEY_UPD_CAP"]
 
 [cert_chains]
-num_slots = 1
+# Tests currently rely on this being greater >= 5
+num_slots = 5
 buf_size = 1024
 max_depth = 4
 
