--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MPL 2.0"
 
 [dependencies]
 bitflags = "1.3"
+heapless = "0.7"
 rand = {version = "0.8", features = ["getrandom"]}
 ring = "0.16.20"
 webpki = "0.22.0"
