--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,13 @@ edition = "2018"
 license = "MPL 2.0"
 
 [features]
-crypto-ring = ["ring", "webpki", "rand"]
+crypto-ring = ["ring", "webpki", "rand", "ring-compat"]
 
 [dependencies]
 bitflags = "1.3"
+crypto = { version = "0.3", features = ["digest"] }
 webpki = { version = "0.22.0", optional = true}
+ring-compat = { version = "0.4", optional = true}
 
 [dependencies.ring]
 version = "0.16.20"
