--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ bitflags = "1.3"
 crypto = { version = "0.3", features = ["digest"] }
 webpki = { version = "0.22.0", optional = true}
 ring-compat = { version = "0.4", optional = true}
+heapless = { version = "0.7.0" }
 
 [dependencies.ring]
 version = "0.16.20"
