--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ crypto = { version = "0.3", features = ["digest"] }
 webpki = { version = "0.22.0", optional = true}
 ring-compat = { version = "0.4", optional = true}
 heapless = { version = "0.7.0" }
+derive_more = { version = "0.99.17"}
 
 [dependencies.ring]
 version = "0.16.20"
