--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ webpki = { version = "0.22.0", optional = true}
 ring-compat = { version = "0.4", optional = true}
 heapless = { version = "0.7.0" }
 derive_more = { version = "0.99.17"}
+tinyvec = { version = "1.5.1" }
 
 [dependencies.ring]
 version = "0.16.20"
